--- a/templates/base.html
+++ b/templates/base.html
@@ -85,8 +85,8 @@
     <!-- Подвал -->
     <footer class="mt-5">
         <div class="container text-center text-muted">
-            <p>© 2023 PollHub - Сервис для создания опросов. Все права защищены.</p>
-            <p class="small">Создано командой "Dynamic Duo"</p>
+            <p>© 2025 PollHub - Сервис для создания опросов.</p>
+            <p class="small">Создано командой "ДААЖЕЕ"</p>
         </div>
     </footer>
 
