--- a/templates/poll_detail.html
+++ b/templates/poll_detail.html
@@ -27,19 +27,19 @@
                             <div class="list-group">
                                 <label class="list-group-item">
                                     <input class="form-check-input me-2" type="radio" name="selected_option" value="1" required>
-                                    {{ poll.option_one }}
+                                    {{ poll.option_1 }}
                                 </label>
                                 <label class="list-group-item">
                                     <input class="form-check-input me-2" type="radio" name="selected_option" value="2">
-                                    {{ poll.option_two }}
+                                    {{ poll.option_2 }}
                                 </label>
                                 <label class="list-group-item">
                                     <input class="form-check-input me-2" type="radio" name="selected_option" value="3">
-                                    {{ poll.option_three }}
+                                    {{ poll.option_3 }}
                                 </label>
                                 <label class="list-group-item">
                                     <input class="form-check-input me-2" type="radio" name="selected_option" value="4">
-                                    {{ poll.option_four }}
+                                    {{ poll.option_4 }}
                                 </label>
                             </div>
                         </div>
